# text-anonymizer

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  markdown  pyproject.toml  python  requirements.txt
.github/workflows/: ci.yml  pr.yml
evaluations/: llm_evaluation.py
src/text_anonymizer/: __init__.py  core.py  main.py
tests/: test_text_anonymizer.py
