[tool.poetry]
name = "text-anonymizer"
version = "0.1.0"
description = "A Python library for anonymizing and de-anonymizing text"
authors = ["Viktor Bezdek <viktor.bezdek@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/viktorbezdek/text-anonymizer"
repository = "https://github.com/viktorbezdek/text-anonymizer"
documentation = "https://text-anonymizer.readthedocs.io"
keywords = ["anonymization", "nlp", "text-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "text_anonymizer", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.7.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"
bandit = "^1.7.9"
docformatter = "^1.7.5"
ruff = "^0.6.0"

[tool.poetry.scripts]
text-anonymizer = "text_anonymizer.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=src"
testpaths = ["tests"]

[tool.ruff]
select = ["E", "F", "I", "N", "W", "D"]
ignore = ["D100", "D104"]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
